fix: increased gap

--- a/components/Calendar/Calendar.module.scss
+++ b/components/Calendar/Calendar.module.scss
@@ -70,7 +70,7 @@ $calendarMainColor: var(--c-primary-container);
   color: black;
   border: 1px solid $calendarMainColor;
   display: flex;
-  gap: 4px;
+  gap: 8px;
   flex-wrap: wrap;
   flex-direction: column;
   align-items: flex-start;
